[quick] Fix bad overflow olln

--- a/olln/src/scss/zomm-sur.scss
+++ b/olln/src/scss/zomm-sur.scss
@@ -1,6 +1,7 @@
 .zoom-sur {
   padding-bottom: 0;
   position: relative;
+  overflow-x: hidden;
 
   @include media-breakpoint-down(lg) {
     width: 100%;
